--- a/DisableSpells/DisableSpells/DisableSpells.csproj
+++ b/DisableSpells/DisableSpells/DisableSpells.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F86547B1-12B5-4022-B3A7-5C9C09793D8A}</ProjectGuid>
+    <ProjectGuid>{214633AF-61D2-4CA7-A8EF-66BFB110FFA1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Activator</RootNamespace>
-    <AssemblyName>Activator</AssemblyName>
+    <RootNamespace>DisableSpells</RootNamespace>
+    <AssemblyName>DisableSpells</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PreBuildEvent />
@@ -35,14 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="clipper_library">
-      <HintPath>E:\LeagueSharp\\System\clipper_library.dll</HintPath>
-    </Reference>
     <Reference Include="LeagueSharp">
       <HintPath>E:\LeagueSharp\\System\LeagueSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="LeagueSharp.AppDomainManager">
-      <HintPath>E:\LeagueSharp\\System\LeagueSharp.AppDomainManager.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
       <HintPath>E:\LeagueSharp\\System\LeagueSharp.Common.dll</HintPath>
@@ -55,7 +49,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,12 +56,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActiveSpell.cs" />
-    <Compile Include="AutoExhaust.cs" />
-    <Compile Include="AutoPotion.cs" />
-    <Compile Include="AutoShield.cs" />
-    <Compile Include="AutoSmite.cs" />
-    <Compile Include="Config.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
